--- a/styles/styles.css
+++ b/styles/styles.css
@@ -500,6 +500,9 @@ body {
   padding-left: 22px;
   background-color: #F2F2F2;
   border: none;
+  font-size: 18px;
+  line-height: 26px;
+  color: #000000;
 }
 
 .subscription-email-input-index {
@@ -1685,10 +1688,6 @@ span.hotel-search-label {
   margin: 0;
 }
 
-.hotel-search-field-number:focus-visible {
-  outline: none;
-}
-
 .hotel-search-field-number[value] {
   color: #000000;
   font-family: inherit;
@@ -1778,16 +1777,18 @@ span.hotel-search-label {
   color: rgba(0, 0, 0, 0.6);
 }
 
-.hotel-search-field:not([type="number"]):hover {
+.hotel-search-field:hover {
   background-color: #E6E6E6;
 }
 
-.hotel-search-field:not([type="number"]):focus-visible {
+.hotel-search-field:focus-visible {
   background-color: #E6E6E6;
   outline: 3px solid #83B3D3;
+  border: none;
+  z-index: 1;
 }
 
-.hotel-search-field:not([type="number"]):focus-visible:enabled {
+.hotel-search-field:valid {
   background-color: #ffffff;
   border: 2px solid #000000;
 }
@@ -1898,3 +1899,5 @@ span.hotel-search-label {
   position: relative;
   padding-right: 25px;
 }
+
+
